--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           calamari mon obi-wan. Solo grievous lando coruscant. Jinn darth
           palpatine obi-wan mon.
         </p>
-        <span class="expandButton"></span>
+        <span class="expandButton"></span> <span class="readButton">Read</span>
       </div>
       <div class="article">
         <h2>Javascript and You, ES6</h2>
@@ -94,7 +94,7 @@
           second bedroom. Padma and Parvati Sorting Hat Minister of Magic blue
           turban remember my last.
         </p>
-        <span class="expandButton"></span>
+        <span class="expandButton"></span> <span class="readButton">Read</span>
       </div>
       <div class="article">
         <h2>React vs Angular vs Vue</h2>
@@ -138,7 +138,7 @@
           consectetur adipiscing elit. Nidorino Lorem ipsum dolor sit amet,
           consectetur adipiscing elit. Nidoking Lorem ipsum
         </p>
-        <span class="expandButton"></span>
+        <span class="expandButton"></span> <span class="readButton">Read</span>
       </div>
       <div class="article">
         <h2>Professional Software Development in 2018</h2>
@@ -180,7 +180,7 @@
           hodor hodor hodor?! Hodor hodor - hodor hodor hodor. Hodor. Hodor
           hodor... Hodor hodor hodor hodor hodor?
         </p>
-        <span class="expandButton"></span>
+        <span class="expandButton"></span> <span class="readButton">Read</span>
       </div>
 
       <div class="article">
@@ -223,7 +223,7 @@
           hodor hodor hodor?! Hodor hodor - hodor hodor hodor. Hodor. Hodor
           hodor... Hodor hodor hodor hodor hodor?
         </p>
-        <span class="expandButton"></span>
+        <span class="expandButton"></span> <span class="readButton">Read</span>
       </div>
 
       <div class="article">
@@ -266,7 +266,7 @@
           hodor hodor hodor?! Hodor hodor - hodor hodor hodor. Hodor. Hodor
           hodor... Hodor hodor hodor hodor hodor?
         </p>
-        <span class="expandButton"></span>
+        <span class="expandButton"></span> <span class="readButton">Read</span>
       </div>
     </div>
   </body>
